[package]
name = "rs-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23" #Later versions fail to compile
volatile = "0.2.6" #Later versions will not work as intended
spin = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 # (0x10 << 1) | 1 = 32